; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_mac-audio.c_ca_success.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_mac-audio.c_ca_success.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.coreaudio_data = type { i32 }

@noErr = common dso_local global i64 0, align 8
@LOG_WARNING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"[%s]:[device '%s'] %s failed: %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, %struct.coreaudio_data*, i8*, i8*)* @ca_success to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ca_success(i64 %0, %struct.coreaudio_data* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca %struct.coreaudio_data*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  store i64 %0, i64* %6, align 8
  store %struct.coreaudio_data* %1, %struct.coreaudio_data** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  %10 = load i64, i64* %6, align 8
  %11 = load i64, i64* @noErr, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %23

13:                                               ; preds = %4
  %14 = load i32, i32* @LOG_WARNING, align 4
  %15 = load i8*, i8** %8, align 8
  %16 = load %struct.coreaudio_data*, %struct.coreaudio_data** %7, align 8
  %17 = getelementptr inbounds %struct.coreaudio_data, %struct.coreaudio_data* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i8*, i8** %9, align 8
  %20 = load i64, i64* %6, align 8
  %21 = trunc i64 %20 to i32
  %22 = call i32 @blog(i32 %14, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i8* %15, i32 %18, i8* %19, i32 %21)
  store i32 0, i32* %5, align 4
  br label %24

23:                                               ; preds = %4
  store i32 1, i32* %5, align 4
  br label %24

24:                                               ; preds = %23, %13
  %25 = load i32, i32* %5, align 4
  ret i32 %25
}

declare dso_local i32 @blog(i32, i8*, i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
